add changes to openapi tests and remove raw exception:    - changes to test to generate auth values in the template    - remove RuntimeException in the Mojo file
