# src/test/resources/com/corunet/api/generator/openapi/integrationTest/OpenApiGenerationTest/testRestClientApiGeneration/api-test.yml
@@ -61,7 +61,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+security:
+  - BasicAuth: []
 components:
+  securitySchemes:
+    BasicAuth:
+      type: http
+      scheme: basic
   schemas:
     Test:
       type: object
